--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html lang="vi">
 <head>
 	<meta charset="UTF-8">
-	<title> Tran web học tập của nihta</title>
+	<title> Trang web của nihta</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<h1> Xin chào thế giới </h1>
 	<h2> Hello word</h2>
+	<script src="snowstorm.js"></script>
+	<script>snowStorm.excludeMobile = false;</script>
 </body>
 </html>
