--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	
 	
 	<div class="fullscreen-bg">
-  		<img style="height: 100%; width: 100%; object-fit: center" id="background" src="images/6.jpg">
+  		<img style="height: 100%; width: 100%; object-fit: center" id="background" >
   	</div>
 	<script type="text/javascript">  
 		window.onload=function(){  
@@ -22,7 +22,7 @@
 			document.getElementById("background").src = imgarray[s];  
  		}  
 	</script> 
-	
+
 	<h1>
 	<span class="char1" aria-hidden="true">Đếm</span>
 	<span class="char2" aria-hidden="true">ngược</span>
