--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 	</h1>
 
 
-  	<ul id="back-countdiown">
-	  <div class='balloons'>  
+  	<span id="dem-nguoc">
+	  <span class='balloons'>  
 			<div class='balloon'>     
  				<span class="days">00</span>
 				<span class="time1">Ngày</span>
@@ -51,8 +51,8 @@
  				<span class="seconds">00</span>
 				<span class="time1">Giây</span>
 			</div>
-		</div>
-	</ul>  		
+		</span>
+	</span>  		
 
 
 
@@ -64,7 +64,7 @@
 		jQuery(function ($) { 
 		      'use strict';
 		(function () { 
-		   $("#back-countdiown").countdown({ 
+		   $("#dem-nguoc").countdown({ 
 		    // Thời gian January February March April May June July August September October November December
 		   date: "5 february 2019 00:00:00",
 		         format: "on" 
