--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 
   	<span id="dem-nguoc">
-	  <span class='balloons'>  
+	  <div class='balloons'>  
 			<div class='balloon'>     
  				<span class="days">00</span>
 				<span class="time1">Ngày</span>
@@ -51,7 +51,7 @@
  				<span class="seconds">00</span>
 				<span class="time1">Giây</span>
 			</div>
-		</span>
+		</div>
 	</span>  		
 
 
