--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
 	
 	<script src="snowstorm.js"></script>
 	<script>snowStorm.excludeMobile = false;</script>
+	<span>
+		<a href="https://github.com/Nihta/nihta.github.io.git"> Xem nguồn </a>
+	</span>
 
 
 
