--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	
 	
 	<div class="fullscreen-bg">
-  		<img style="height: 100%; width: 100%; object-fit: center" id="background" >
+  		<img style="height:100%;width:100%;object-fit:center" id="background" >
   	</div>
 	<script type="text/javascript">  
 		window.onload=function(){  
@@ -59,7 +59,7 @@
 
 
 
-	<div class="bo"> HAha </div>		
+	<div class="bo"> HAha haha HAhah ahahahah ahahah ahahaha hahahahaha hahahaha hahahahahah ahahahah haha haha hahah ahahah ahahah ahahaha hah ahah ahahah ahaha haha hahah hahah aha</div>		
 
 
 
@@ -85,8 +85,10 @@
 	
 	<script src="snowstorm.js"></script>
 	<script>snowStorm.excludeMobile = false;</script>
-	<span>
+	<span class="tooltip" style="margin-left: 25px;">
 		<a href="https://github.com/Nihta/nihta.github.io.git"> Xem nguồn </a>
+		<span class="tooltiptext">Xem nguồn trang web này</span>
+
 	</span>
 
 
