--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 
 
-	<div class="bo"> HAha haha HAhah ahahahah ahahah ahahaha hahahahaha hahahaha hahahahahah ahahahah haha haha hahah ahahah ahahah ahahaha hah ahah ahahah ahaha haha hahah hahah aha</div>		
+	<div class="bo" id="rotation"> Đang tải ... </div>		
 
 
 
@@ -85,11 +85,13 @@
 	
 	<script src="snowstorm.js"></script>
 	<script>snowStorm.excludeMobile = false;</script>
-	<span class="tooltip" style="margin-left: 25px;">
-		<a href="https://github.com/Nihta/nihta.github.io.git"> Xem nguồn </a>
-		<span class="tooltiptext">Xem nguồn trang web này</span>
+	<span class="tooltip" style="bottom: 10px;right: 32px;">
+		<a href="https://github.com/Nihta/nihta.github.io.git"> 😎 Nihta </a>
+		<span class="tooltiptext tooltip-top">Xem nguồn trang web này</span>
 
 	</span>
+	<script src="ynghia.js"></script>
+	<script type="text/javascript">rotator();</script>
 
 
 
