--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   	</div>
 	<script type="text/javascript">  
 		window.onload=function(){  
-			var imgarray = new Array("images/1.jpg", "images/2.jpg", "images/3.jpg", "images/4.jpg");  
+			var imgarray = new Array("images/1.jpg", "images/2.jpg", "images/3.jpg", "images/4.jpg", "images/5.jpg", "images/5.jpg", "images/7.jpg", "images/8.jpg", "images/9.jpg", "images/10.jpg", "images/11.jpg");  
 			var s = Math.floor(Math.random()* imgarray.length);  
 			document.getElementById("background").src = imgarray[s];  
  		}  
@@ -85,7 +85,7 @@
 	
 	<script src="snowstorm.js"></script>
 	<script>snowStorm.excludeMobile = false;</script>
-	<span class="tooltip" style="bottom: 10px;right: 32px;">
+	<span class="tooltip" style="bottom: 10px;left: 32px;">
 		<a href="https://github.com/Nihta/nihta.github.io.git"> 😎 Nihta </a>
 		<span class="tooltiptext tooltip-top">Xem nguồn trang web này</span>
 
@@ -95,5 +95,52 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+    <span class="menu">
+      <span class="overlay"></span>
+      <span class="fab"></span>
+      <ul>
+        <li><span> Link 1</span><span class="fa fa"></span></li>
+        <li><span> Link 2</span><span class="fa fa"></span></li>
+        <li><span> Link3</span><span class="fa fa"></span></li>
+        <li><span>Link4</span><span class="fa fa"></span></li>
+        <li><span>Link5</span><span class="fa fa"></span></li>
+      </ul>
+      <span class="fa fa-facebook"></span>
+    </span> 
+<script type="text/javascript">
+	(function() {
+  var frameLoop;
+  // Loop Animation
+  frameLoop = setInterval(function() {
+    return $('.menu').toggleClass('active');
+  }, 3000);
+// Disables Loop onHover
+  $('body').hover(function() {
+    return clearInterval(frameLoop);
+  });
+
+  $('body').click(function() {
+    return clearInterval(frameLoop);
+  });
+
+  $('.fab').on('click', function(e) {
+    e.preventDefault();
+    return $('.menu').toggleClass('active');
+  });
+
+}).call(this);
+
+</script>
 </body>
 </html>
