--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title> Trang web của nihta</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="shortcut icon" href="favicon.ico" type="image/png">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 	
 </head>
 <body>
@@ -94,53 +95,39 @@
 	<script type="text/javascript">rotator();</script>
 
 
+	<span class="menu">
+    	<span class="overlay"></span>
+    	<span class="fab1"></span>
+	    	<ul>
+		        <li><span class="fab fa-github-alt"><a href="https://github.com/Nihta"> Github</a></span></li>
+		        <li><span> Link 2</span><span class="fa fa"></span></li>
+		        <li><span> Link3</span><span class="fa fa"></span></li>
+		        <li><span>Link4</span><span class="fa fa"></span></li>
+		        <li><span>Link5</span><span class="fa fa"></span></li>
+	    	</ul>
+	    <a href="https://m.me/Nihta.haha">
+	    	<span class="tooltip fab fa-facebook-messenger">
+	    		<span style="font-size: 14px;line-height: 12px;" class="tooltiptext tooltip-right">Liên hệ trên Messenger</span>
+	    	</span>
+	    </a>
+    </span>
 
-
-
-
-
-
-
-
-
-
-
-
-    <span class="menu">
-      <span class="overlay"></span>
-      <span class="fab"></span>
-      <ul>
-        <li><span> Link 1</span><span class="fa fa"></span></li>
-        <li><span> Link 2</span><span class="fa fa"></span></li>
-        <li><span> Link3</span><span class="fa fa"></span></li>
-        <li><span>Link4</span><span class="fa fa"></span></li>
-        <li><span>Link5</span><span class="fa fa"></span></li>
-      </ul>
-      <span class="fa fa-facebook"></span>
-    </span> 
-<script type="text/javascript">
-	(function() {
-  var frameLoop;
-  // Loop Animation
-  frameLoop = setInterval(function() {
-    return $('.menu').toggleClass('active');
-  }, 3000);
-// Disables Loop onHover
-  $('body').hover(function() {
-    return clearInterval(frameLoop);
-  });
-
-  $('body').click(function() {
-    return clearInterval(frameLoop);
-  });
-
-  $('.fab').on('click', function(e) {
-    e.preventDefault();
-    return $('.menu').toggleClass('active');
-  });
-
-}).call(this);
-
-</script>
+	<script type="text/javascript">
+		(function() {
+			var frameLoop;
+			// Loop Animation
+			frameLoop = setInterval(function() {
+				return $('.menu').toggleClass('active');
+			}, 3000);
+			// Disables Loop onHoVer
+			$('body').click(function() {
+				return clearInterval(frameLoop);
+			});
+			$('.fab1').on('click', function(e) {
+				e.preventDefault();
+				return $('.menu').toggleClass('active');
+			});
+		}).call(this);
+	</script>
 </body>
 </html>
