--- a/index-CLONE.html
+++ b/index-CLONE.html
@@ -6,7 +6,7 @@
 	<title> Trang web của nihta</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="shortcut icon" href="favicon.ico" type="image/png">
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 	
 </head>
 <body>
@@ -98,31 +98,18 @@
 	<span class="menu">
     	<span class="overlay"></span>
     	<span class="fab1"></span>
-		<ul>
-		    <li>
-		      <a href="https://www.facebook.com/Nihta.haha" data-tooltip="Facebook">
-		      	<i class="fab fa-facebook"></i>
-		      </a>
-		    </li>
-
-		    <li>
-		      <a href="https://m.me/Nihta.haha" data-tooltip="Messenger">
-		        <i class="fab fa-facebook-messenger"></i>
-		      </a>
-		    </li>
-
-		    <li>
-				<a href="#" data-tooltip="Github">
-					<i class="fab fa-github"></i>
-				</a>
-		    </li>
-
-		    <li>
-		      <a href="#" data-tooltip=" No no">
-		        <i class="icon-material icon-material_gp"></i>
-		      </a>
-		    </li>
-		</ul>
+	    	<ul>
+		        <li><span class="fab fa-github-alt"><a href="https://github.com/Nihta"> Github</a></span></li>
+		        <li><span> Link 2</span><span class="fa fa"></span></li>
+		        <li><span> Link3</span><span class="fa fa"></span></li>
+		        <li><span>Link4</span><span class="fa fa"></span></li>
+		        <li><span>Link5</span><span class="fa fa"></span></li>
+	    	</ul>
+	    <a href="https://m.me/Nihta.haha">
+	    	<span class="tooltip fab fa-facebook-messenger">
+	    		<span style="font-size: 14px;line-height: 12px;" class="tooltiptext tooltip-right">Liên hệ trên Messenger</span>
+	    	</span>
+	    </a>
     </span>
 
 	<script type="text/javascript">
