--- a/video.html
+++ b/video.html
@@ -2,7 +2,8 @@
 <html lang="vi">
 <head>
 	<meta charset="UTF-8">
-	<title>Video</title>
+	<title>Trang https://sites.google.com/view/nihtavideo/</title>
+	<meta http-equiv="refresh" content="0;https://sites.google.com/view/nihtavideo/">
 </head>
 <style type="text/css">
 	body {
@@ -12,13 +13,13 @@
 	}
 	a {
 		color: tomato;
-		font-size: 24px;
+		font-size: 40px;
 	}
 </style>
 <body>
 
-	<iframe src="https://www.facebook.com/video/embed?video_id=1262566393882754" width="100%" height="480" scrolling="auto"></iframe>
-	<a href=""> Tải lại </a>
+	
+	<a href="https://sites.google.com/view/nihtavideo/"> BẤM VÀO ĐÂY để chuyển dến https://sites.google.com/view/nihtavideo/</a>
 	
 </body>
 </html>
