--- a/video.html
+++ b/video.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Trang https://sites.google.com/view/nihtavideo/</title>
-	<meta http-equiv="refresh" content="0;https://sites.google.com/view/nihtavideo/">
+	
 </head>
 <style type="text/css">
 	body {
@@ -17,6 +17,6 @@
 	}
 </style>
 <body>
-	<a href="https://sites.google.com/view/nihtavideo/"> BẤM VÀO ĐÂY để chuyển dến https://sites.google.com/view/nihtavideo/ </a>	
+	<a href="<meta http-equiv="refresh" content="0;https://sites.google.com/view/nihtavideo/">"> BẤM VÀO ĐÂY để chuyển dến https://sites.google.com/view/nihtavideo/ </a>	
 </body>
 </html>
