--- a/video.html
+++ b/video.html
@@ -13,10 +13,10 @@
 	}
 	a {
 		color: tomato;
-		font-size: 40px;
+		font-size: 60px;
 	}
 </style>
 <body>
-	<a href="<meta http-equiv="refresh" content="0;https://sites.google.com/view/nihtavideo/">"> BẤM VÀO ĐÂY để chuyển dến https://sites.google.com/view/nihtavideo/ </a>	
+	<a href="https://www.facebook.com/video/embed?video_id=514518182290492"> BẤM VÀO ĐÂY  </a>	
 </body>
 </html>
