--- a/video.html
+++ b/video.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 <head>
 	<meta charset="UTF-8">
-	<title>Trang https://sites.google.com/view/nihtavideo/</title>
+	<title> Nihta Video</title>
 	
 </head>
 <style type="text/css">
@@ -13,10 +13,18 @@
 	}
 	a {
 		color: tomato;
-		font-size: 60px;
+		font-size: 40px;
+	}
+	iframe {
+	    display: block;      
+	    background: #000;
+	    border: none;         
+	    height: 100vh;       
+	    width: 100vw;
 	}
 </style>
-<body>
-	<a href="https://www.facebook.com/video/embed?video_id=514518182290492"> BẤM VÀO ĐÂY  </a>	
+<body>		
+	<iframe src="https://www.facebook.com/video/embed?video_id=514518182290492"></iframe>
+	<a href="https://www.facebook.com/video/embed?video_id=514518182290492"> BẤM VÀO ĐÂY  </a>
 </body>
 </html>
