--- a/video.html
+++ b/video.html
@@ -13,7 +13,7 @@
 	}
 	a {
 		color: tomato;
-		font-size: 40px;
+		font-size: 20px;
 	}
 	iframe {
 	    display: block;      
@@ -25,6 +25,6 @@
 </style>
 <body>		
 	<iframe src="https://www.facebook.com/video/embed?video_id=314579615857887"></iframe>
-	<a href="https://www.facebook.com/video/embed?video_id=314579615857887"> BẤM VÀO ĐÂY  </a>
+	<a style="position: fixed;bottom: 20px; right: 20px;" href="https://www.facebook.com/video/embed?video_id=314579615857887"> BẤM VÀO ĐÂY </a>
 </body>
 </html>
